--- a/src/app/clients/[clientId]/queries/[queryId]/_components/DirectoryPanel/QueryTree/components/Toolbar.module.css
+++ b/src/app/clients/[clientId]/queries/[queryId]/_components/DirectoryPanel/QueryTree/components/Toolbar.module.css
@@ -1,31 +1,40 @@
 .toolbar {
   display             : flex;
   justify-content     : flex-end;
-  padding-inline-end  : var(--space-2);
-  padding-block       : var(--space-2);
+  /* padding-inline-end  : var(--space-2); */
+  /* padding-block       : var(--space-2); */
   container-type      : inline-size;
   container-name      : toolbar;
 }
+
 .tools {
   display       : flex;
   align-items   : center;
-  border-radius : 4px;
-  border        : 1px solid var(--border-tertiary);
+  column-gap    : var(--space-1);
+  /* border-radius : 4px; */
+  /* border        : 1px solid var(--border-tertiary); */
 }
 .tools .spacer {
-  width             : 1px;
+  width             : 4px;
   height            : 100%;
-  background-color  : var(--border-tertiary);
+  /* background-color  : var(--border-tertiary); */
 }
+
 .tool {
   display           : inline-flex;
   align-items       : center;
-  gap               : var(--space-1);
-  padding           : var(--space-1) var(--space-2);
+  justify-content   : center;
+  column-gap        : var(--space-1);
+  width             : 24px;
+  height            : 20px;
+  padding           : unset;
   border-radius     : unset;
   color             : var(--text-primary);
   background-color  : unset;
 }
-.tool:hover { background: var(--surface-2); }
+.tool:hover {
+  border-radius   : var(--radius-4);
+  background-color: var(--surface-2);
+}
 .tool:disabled { opacity: 0.5; cursor: not-allowed; }
 .tool > span { font-size: var(--text-xs); }
