fix the padding/margin in the chat composer

--- a/src/app/clients/[clientId]/queries/[queryId]/_components/ChatPanel/MessageList/styles.module.css
+++ b/src/app/clients/[clientId]/queries/[queryId]/_components/ChatPanel/MessageList/styles.module.css
@@ -19,6 +19,7 @@
   display: block;
   margin-bottom: var(--space-5);
   padding-inline-start: 12px;
+  padding-inline-end: 2px;
 }
 
 @media (prefers-reduced-motion: reduce) {
